fixed z-index

--- a/src/components/Admin/AdminTariffs/admin-tariffs.module.sass
+++ b/src/components/Admin/AdminTariffs/admin-tariffs.module.sass
@@ -68,11 +68,5 @@
 .tariffForm_error
   @include error
 
-.headCell
-  z-index: 1
-
-.toggle
-  z-index: 0
-
 .inactive
   color: $c-error
